[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/common/Aspect.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/fonts/normal.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/gameplay/ZoneVictory.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_left = -3.47516
margin_top = 1.09406
margin_right = 1020.52
margin_bottom = 601.094
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectName" type="RichTextLabel" parent="Panel"]
margin_top = 70.0
margin_right = 1024.0
margin_bottom = 170.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]COPPER[/center]"
text = "COPPER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyDefeated" type="RichTextLabel" parent="Panel"]
margin_left = 393.0
margin_top = 182.0
margin_right = 645.0
margin_bottom = 222.0
text = "The Copper Cyclops has been defeated!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Aspect" parent="Panel" instance=ExtResource( 1 )]
margin_left = 440.0
margin_top = 240.0
margin_right = 580.0
margin_bottom = 340.0

[node name="AspectExplain" type="RichTextLabel" parent="Panel"]
margin_left = 394.888
margin_top = 403.0
margin_right = 653.888
margin_bottom = 475.0
text = "You acquired the aspect of Copper.

Bonus: heal 5 at the end of each battle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="Panel"]
margin_left = 429.463
margin_top = 480.432
margin_right = 584.463
margin_bottom = 500.432
text = "Continue your quest"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/ContinueButton" to="." method="_on_ContinueButton_pressed"]
